# silmaril

./: .dockerignore  .editorconfig  .gitignore  AAA_ENGINE_PERFORMANCE_COMPARISON_COMPLETE.md  AAA_FEATURE_GAP_ANALYSIS.md  AAA_INDUSTRY_STANDARD_ASSESSMENT.md  AAA_PERFORMANCE_COMPARISON_MATRIX.md  BENCHMARKING.md  BENCHMARKING_IMPLEMENTATION_COMPLETE.md  BENCHMARKING_STATUS.md  BENCHMARK_AUTOMATION_COMPLETE.md  BENCHMARK_CI_FILES_SUMMARY.md  BENCHMARK_CI_INTEGRATION_COMPLETE.md  BENCHMARK_COMPARISON_SUMMARY.md  BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_2026-02-01.md  BENCHMARK_RESULTS_FINAL.md  CACHE_OPTIMIZATION_SUMMARY.md  CHANGE_DETECTION_IMPLEMENTATION.md  CLAUDE.md  COMPONENT_GET_OPTIMIZATION_SUMMARY.md  COMPREHENSIVE_BENCHMARK_REPORT_2026-02-01.md  Cargo.toml  CUserssebasAppDataLocalTempclaudephysics_benchmarks.txt  DEV_WORKFLOW_IMPLEMENTATION.md  DISCUSSION_CLI_CODEGEN.md  DOCKER.md  Ddevagent-game-enginePERFORMANCE.md  Ddevagent-game-enginedocsPHASE1.6-COMPLETE.md  Ddevagent-game-engineenginerendererbuild.rs  ECS_IMPLEMENTATION_COMPLETE.md  ECS_PERFORMANCE_BENCHMARKS_SUMMARY.md  ECS_QUERY_OPTIMIZATION_SUMMARY.md  ECS_QUERY_PERFORMANCE_OPTIMIZATIONS.md  ENTITY_ALLOCATOR_OPTIMIZATION_SUMMARY.md  ERROR_ENFORCEMENT_VERIFICATION.md  ERROR_HANDLING_ENFORCEMENT.md  GAME_ENGINE_BENCHMARKS_COMPLETE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  (+95 more)
engine/ai/: Cargo.toml
engine/ai/src/: lib.rs  mcp.rs  permissions.rs  registry_bridge.rs  server.rs
engine/assets/: Cargo.toml  README.md
engine/assets/benches/: HOT_RELOAD_BENCH_README.md  asset_benches.rs  asset_handle_benches.rs  bundle_benches.rs  font_benches.rs  hot_reload_benches.rs  industry_comparison.rs  loader_benches.rs  manager_benches.rs  manifest_benches.rs  memory_benches.rs  mesh_benches.rs  network_benches.rs  procedural_benches.rs  shader_benches.rs  texture_benches.rs  validation_benches.rs
engine/assets/src/: asset_id.rs  async_loader.rs  audio.rs  bundle.rs  font.rs  handle.rs  hot_reload.rs  lib.rs  loader.rs  manager.rs  manifest.rs  material.rs  memory.rs  mesh.rs  network.rs  registry.rs  shader.rs  texture.rs  validation.rs
engine/assets/test-assets/: README.md  brick.yaml  metal.yaml
engine/assets/test_data/: cube.gltf  generate_gltf_bin.py  triangle.gltf  triangle_embedded.gltf
engine/assets/tests/: HOT_RELOAD_TEST_README.md  asset_integration.rs  bundle_tests.rs  font_integration_test.rs  hot_reload_demo.rs  hot_reload_tests.rs  loader_tests.rs  manager_integration.rs  manifest_tests.rs  memory_property_tests.rs  memory_tests.rs  mesh_loaders_test.rs  network_tests.rs  procedural_integration.rs  procedural_tests.rs  shader_integration_test.rs  validation_integration.rs
engine/audio/: CLAUDE.md  Cargo.toml  DEBUG_GUIDE.md  PERFORMANCE.md  QUICK_START_WEB.md  README.md  README_ANDROID.md  build-wasm.sh  test-web-audio.html
engine/audio/benches/: android_audio_benches.rs  audio_benches.rs  cache_benches.rs  doppler_benches.rs  effect_chain_benches.rs  effects_benches.rs  ios_backend_benches.rs  memory_benches.rs  performance_regression.rs  scalability_benches.rs  scenario_benches.rs  simd_batch_benches.rs  spatial_audio_benches.rs  streaming_benches.rs  web_audio_benches.rs  web_backend_benches.rs
engine/audio/src/: components.rs  diagnostics.rs  doppler.rs  effects.rs  engine.rs  error.rs  event_logger.rs  lib.rs  simd_batch.rs  system.rs
engine/audio/tests/: README.md  android_audio_test.rs  android_audio_unit_test.rs  concurrency_tests.rs  doppler_accuracy_tests.rs  doppler_demonstration.rs  doppler_integration_test.rs  doppler_pitch_test.rs  e2e_validator.rs  ecs_integration_full.rs  ecs_integration_tests.rs  edge_cases_tests.rs  effect_stack_tests.rs  effects_tests.rs  error_recovery_tests.rs  fuzz_tests.rs  ios_backend_tests.rs  platform_tests.rs  property_tests.rs  regression_tests.rs  resource_leak_tests.rs  stress_tests.rs  unit_tests.rs  (+3 more)
engine/auth/: Cargo.toml
engine/auto-update/: CLAUDE.md  Cargo.toml
engine/build-utils/: CLAUDE.md  Cargo.toml
engine/cli/: Cargo.toml
engine/core/: CLAUDE.md  Cargo.toml  MICRO_OPTIMIZATIONS.md  OPTIMIZATION_REPORT.md  WORLD_OPTIMIZATIONS.md  baseline_bench.txt  bench_baseline.txt  bench_results.txt  benchmark_baseline.txt  build.rs  libmod.rlib  test_filter_debug.rs  world_bench_before.txt
engine/editor/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
engine/interest/: CLAUDE.md  Cargo.toml
engine/macros/: CLAUDE.md  Cargo.toml
engine/math/: ALIGNED_MEMORY.md  CACHE_ALIGNED_SUMMARY.md  CACHE_ALIGNMENT_README.md  CLAUDE.md  CPU_FEATURES.md  Cargo.toml  PERFORMANCE.md  SIMD_OPTIMIZATIONS.md  build.rs  verify_aligned.sh
engine/networking/: ADVANCED_NETWORKING_BENCHMARKS.md  CLAUDE.md  Cargo.toml  NETWORK_BENCHMARKS.md  QUICK_START_BENCHMARKS.md
engine/observability/: ADMIN.md  CLAUDE.md  Cargo.toml  METRICS.md  prometheus.yml
engine/ops/: Cargo.toml
engine/physics/: CLAUDE.md  Cargo.toml  IMPLEMENTATION_STATUS.md  OPTIMIZATION_TASK_53.md  PHYSICS_INTEGRATION_OPTIMIZATION.md  QUICK_START.md  build.rs
engine/profiling/: Cargo.toml  README.md  TRACY_QUICKSTART.md  example_config.yaml  test_config_example.yaml
engine/render-context/: Cargo.toml  build.rs
engine/renderer/: CLAUDE.md  Cargo.toml  README.md  benchmark_actual.txt  benchmark_results.txt  benchmark_with_sdk.txt  build.rs
engine/shared/: Cargo.toml
engine/templating/: Cargo.toml  README.md
examples/mmorpg/: CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  test_demo.bat  test_demo.sh
examples/moba/: CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
examples/rotating-cube/: .gitignore  Cargo.toml  README.md  game.toml
examples/singleplayer/: AUDIO_GUIDE.md  CLAUDE.md  Cargo.toml  README.md
examples/turn-based/: CLAUDE.md  Cargo.toml  README.md
wasm-demo/: Cargo.toml  README.md  index.html
xtask/: Cargo.toml  README.md
xtask/src/: benchmark.rs  build.rs  codegen.rs  dev.rs  docker.rs  lint.rs  main.rs  pgo.rs  phase2.rs  quality.rs  test.rs  utils.rs
(+1254 files in other folders)
