[workspace]
resolver = "2"
members = [
    "engine/core",
    "engine/renderer",
    "engine/networking",
    "engine/physics",
    "engine/audio",
    "engine/lod",
    "engine/interest",
    "engine/auto-update",
    "engine/observability",
    "engine/macros",
    "engine/binaries/client",
    "engine/binaries/server",
]

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Math
glam = { version = "0.29", features = ["serde"] }

# Graphics
ash = "0.38"
gpu-allocator = { version = "0.27", features = ["vulkan"] }
winit = "0.30"

# Serialization
bincode = "1.3"
rkyv = "0.7"
flatbuffers = "24.3"

# Testing
proptest = "1.4"
criterion = "0.5"

[profile.dev]
opt-level = 1  # Faster debug builds

[profile.dev.package."*"]
opt-level = 3  # Optimize dependencies even in debug

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
debug = true  # For profiling
