[workspace]
resolver = "2"
members = [
    "xtask",
    "engine/ops",
    "engine/cli",
    "engine/cli/asset-cooker",
    "engine/core",
    "engine/math",
    "engine/build-utils",
    "engine/assets",
    "engine/renderer",
    "engine/render-context",
    "engine/networking",
    "engine/physics",
    "engine/audio",
    "engine/lod",
    "engine/interest",
    "engine/auto-update",
    "engine/observability",
    "engine/profiling",
    "engine/macros",
    "engine/shared",
    "engine/auth",
    "engine/templating",
    "engine/ai",
    "engine/editor",
    "engine/dev-tools/hot-reload",
    "engine/binaries/client",
    "engine/binaries/server",
    "examples/singleplayer",
]
exclude = [
    "examples/wasm-simd",  # Separate WASM demo project with its own build process
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Silmaril Team"]
repository = "https://github.com/yourusername/silmaril"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
parking_lot = "0.12"

# Profiling
tracy-client = { version = "0.17", default-features = false }

# Math
glam = { version = "0.29", features = ["serde"] }

# Graphics
ash = "0.38"
gpu-allocator = { version = "0.27", features = ["vulkan"] }
winit = "0.30"

# Serialization
bincode = "1.3"
rkyv = "0.7"
flatbuffers = "24.3"

# Testing
proptest = "1.4"
criterion = "0.5"

[profile.dev]
opt-level = 1  # Faster debug builds

[profile.dev.package."*"]
opt-level = 3  # Optimize dependencies even in debug

[profile.release]
lto = "thin"
codegen-units = 16
opt-level = 3
strip = false  # Keep symbols for profiling

[profile.release-server]
# Server profile: Optimize for size + throughput
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = "z"  # Optimize for size
strip = true     # Remove symbols (smaller binary)

[profile.bench]
inherits = "release"
debug = true  # For profiling

[workspace.lints.clippy]
# Deny correctness and suspicious lints - these indicate bugs
# Use lower priority so specific lints can override
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Warn on performance issues
perf = { level = "warn", priority = -1 }

# Warn on pedantic lints - code quality and style
pedantic = { level = "warn", priority = -1 }

# Specific important lints (higher priority than groups)
missing_docs = "warn"
unwrap_used = "warn"
expect_used = "warn"
