[package]
name = "wasm-simd-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
engine-math = { path = "../engine/math", features = ["simd"] }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Performance",
]

[profile.release]
lto = true
opt-level = 3  # Optimize for speed (changed from "s" to enable better SIMD)

# Enable WASM SIMD for wasm32 target
[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+simd128"]
