[package]
name = "engine-ai"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "MCP server for Silmaril editor AI integration"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { workspace = true }
base64 = "0.22"
png = "0.17"
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "test-util"] }
