[package]
name = "engine-assets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["lz4"]
backtrace = ["engine-core/backtrace"]
fbx-support = ["fbxcel-dom"]
hot-reload = ["notify"]
async = ["tokio"]
lz4 = ["lz4_flex"]
zstd = ["dep:zstd"]

[dependencies]
glam = { workspace = true }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
gltf = { version = "1.4", default-features = false, features = ["utils"] }
fbxcel-dom = { version = "0.0.10", optional = true }
blake3 = "1.5"
bincode = "1.3"
lz4_flex = { version = "0.11", optional = true }
zstd = { version = "0.13", optional = true }
parking_lot = "0.12"
dashmap = "5.5"
hound = "3.5"
lewton = "0.10"
image = "0.25"
ddsfile = "0.5"
ttf-parser = "0.24"
notify = { version = "6.1", optional = true }
tokio = { version = "1.35", features = ["fs", "rt", "sync", "time"], optional = true }
linked-hash-map = "0.5"
engine-core = { path = "../core" }
engine-macros = { path = "../macros" }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"
tokio = { version = "1.35", features = ["fs", "rt", "rt-multi-thread", "sync", "time", "macros"] }

[[bench]]
name = "mesh_benches"
harness = false

[[bench]]
name = "texture_benches"
harness = false

[[bench]]
name = "asset_benches"
harness = false

[[bench]]
name = "asset_handle_benches"
harness = false

[[bench]]
name = "shader_benches"
harness = false


[[bench]]
name = "procedural_benches"
harness = false

[[bench]]
name = "font_benches"
harness = false

[[bench]]
name = "validation_benches"
harness = false

[[bench]]
name = "manager_benches"
harness = false

[[bench]]
name = "loader_benches"
harness = false

[[bench]]
name = "memory_benches"
harness = false

[[bench]]
name = "network_benches"
harness = false

[[bench]]
name = "hot_reload_benches"
harness = false

[[bench]]
name = "manifest_benches"
harness = false

[[bench]]
name = "bundle_benches"
harness = false

[[bench]]
name = "industry_comparison"
harness = false
