[package]
name = "engine-auto-update"
version = "0.1.0"
edition = "2021"
authors = ["Agent Game Engine Team"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.35", features = ["full"] }
engine-core = { path = "../core" }

[dev-dependencies]
criterion = "0.5"
