[package]
name = "engine-build-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# No runtime dependencies - this is a build-time utility

[features]
default = []
cpuid = []  # Enable detailed CPU vendor/brand detection
