[package]
name = "silm"
version = "0.1.0"
edition = "2021"
authors = ["Silmaril Team"]
license = "Apache-2.0"
description = "Silmaril game engine CLI — code-first game development"
repository = "https://github.com/maethril/silmaril"
homepage = "https://github.com/maethril/silmaril"
readme = "../../README.md"
keywords = ["game-engine", "cli", "ecs", "multiplayer", "silmaril"]
categories = ["game-development", "command-line-utilities"]

[lib]
name = "silm"
path = "src/lib.rs"

[[bin]]
name = "silm"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "cargo"] }
clap_complete = "4"
anyhow = "1.0"

# Serialization
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Logging
tracing = { workspace = true }

# Async trait support for ProcessKiller
async-trait = "0.1"

# UI
colored = "2.0"
walkdir = "2.4"
zip = "2"

# Serialization for dates
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Engine dependencies
engine-templating = { path = "../templating" }
engine-dev-tools-hot-reload = { path = "../dev-tools/hot-reload" }
notify-debouncer-full = "0.3"

pathdiff = "0.2"

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["full"] }
