[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"
authors = ["Agent Game Engine Team"]

[dependencies]
rayon = "1.8"
bitflags = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bincode = "1.3"
flatbuffers = "24.3"
tracing = "0.1"

[build-dependencies]
flatc-rust = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "ecs_benchmarks"
harness = false

[[bench]]
name = "example_benchmarks"
harness = false

[[bench]]
name = "entity_benches"
harness = false

[[bench]]
name = "query_benches"
harness = false

[[bench]]
name = "ecs_comprehensive_benches"
harness = false

[[bench]]
name = "sparse_set_benches"
harness = false

[[bench]]
name = "serialization_benches"
harness = false
