[package]
name = "engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rayon = "1.8"
bitflags = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bincode = "1.3"
flatbuffers = "24.3"
tracing = "0.1"
engine-macros = { path = "../macros" }
engine-math = { path = "../math", features = ["serde", "simd"] }

# Optional profiling support
agent-game-engine-profiling = { path = "../profiling", optional = true }
puffin = { version = "0.19", optional = true }

# Platform abstractions
winit = { version = "0.29", optional = true }
raw-window-handle = { version = "0.6", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["profileapi", "synchapi", "processthreadsapi", "winbase"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
core-foundation = "0.9"

[features]
default = []
window = ["winit", "raw-window-handle"]
backtrace = []
profiling = ["agent-game-engine-profiling/profiling-puffin", "puffin"]
metrics = ["agent-game-engine-profiling/metrics"]

[build-dependencies]
engine-build-utils = { path = "../build-utils" }

[dev-dependencies]
criterion = "0.8"
proptest = "1.4"
iai-callgrind = "0.16"

[[bench]]
name = "ecs_benchmarks"
harness = false

[[bench]]
name = "example_benchmarks"
harness = false

[[bench]]
name = "entity_benches"
harness = false

[[bench]]
name = "query_benches"
harness = false

[[bench]]
name = "ecs_comprehensive_benches"
harness = false

[[bench]]
name = "sparse_set_benches"
harness = false

[[bench]]
name = "serialization_benches"
harness = false

[[bench]]
name = "platform_benches"
harness = false

[[bench]]
name = "cache_benches"
harness = false

[[bench]]
name = "allocator_benches"
harness = false

[[bench]]
name = "world_benches"
harness = false

[[bench]]
name = "spatial_benches"
harness = false

[[bench]]
name = "game_engine_comparison"
harness = false

[[bench]]
name = "ecs_comprehensive"
harness = false

[[bench]]
name = "event_benches"
harness = false

[[bench]]
name = "ecs_simple"
harness = false

[[bench]]
name = "serialization_comprehensive"
harness = false

[[bench]]
name = "change_detection"
harness = false

[[bench]]
name = "ecs_performance"
harness = false

[[bench]]
name = "parallel_queries"
harness = false

[[bench]]
name = "schedule_benches"
harness = false
