[package]
name = "silmaril-editor"
version = "0.1.0"
edition = "2021"
authors = ["Silmaril Team"]
license = "Apache-2.0"
description = "Silmaril game engine visual editor"
build = "src-tauri/build.rs"

[lib]
name = "silmaril_editor"
path = "src-tauri/lib.rs"

[[bin]]
name = "silmaril-editor"
path = "src-tauri/main.rs"

[dependencies]
engine-ops = { path = "../ops" }
engine-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
anyhow = "1.0"
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.10"
