[package]
name = "silmaril-editor"
version = "0.1.0"
edition = "2021"
authors = ["Silmaril Team"]
license = "Apache-2.0"
description = "Silmaril game engine visual editor"
build = "src-tauri/build.rs"

[lib]
name = "silmaril_editor"
path = "src-tauri/lib.rs"

[[bin]]
name = "silmaril-editor"
path = "src-tauri/main.rs"

[dependencies]
engine-ops = { path = "../ops" }
engine-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
anyhow = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
glam = "0.29"
gpu-allocator = { version = "0.28", features = ["vulkan"] }
naga = { version = "24", features = ["glsl-in", "spv-out"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
engine-renderer = { path = "../renderer" }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
ash = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.10"
