[package]
name = "silmaril-editor"
version = "0.1.0"
edition = "2021"
authors = ["Silmaril Team"]
license = "Apache-2.0"
description = "Silmaril game engine visual editor"
build = "src-tauri/build.rs"

[lib]
name = "silmaril_editor"
path = "src-tauri/lib.rs"

[[bin]]
name = "silmaril-editor"
path = "src-tauri/main.rs"

[[bin]]
name = "silmaril-editor-codegen"
path = "src-tauri/bin/codegen.rs"
required-features = ["codegen"]

[features]
codegen = []

[dependencies]
engine-ops = { path = "../ops" }
engine-core = { path = "../core" }
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
anyhow = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
glam = "0.29"
gpu-allocator = { version = "0.28", features = ["vulkan"] }
naga = { version = "24", features = ["glsl-in", "spv-out"] }
bytemuck = { version = "1.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6"
trash = "5"
ignore = "0.4"
portable-pty = "0.8"
which = "4"
uuid = { version = "1", features = ["v4"] }
specta = { version = "2.0.0-rc.21", features = ["derive", "serde_json"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
tokio = { version = "1", features = ["sync"] }

[target.'cfg(windows)'.dependencies]
engine-renderer = { path = "../renderer" }
engine-render-context = { path = "../render-context" }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
] }
ash = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.10"
insta = { version = "1", features = ["json"] }
