[package]
name = "engine-interest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
engine-core = { path = "../core" }
glam = "0.25"
silmaril-profiling = { path = "../profiling", optional = true }
tracing = { version = "0.1", optional = true }

[features]
profiling = ["silmaril-profiling", "engine-core/profiling", "tracing"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "fog_of_war_bench"
harness = false
