[package]
name = "engine-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[features]
# Optional backtrace support (passed through from engine-core)
backtrace = []

# Client/server features for testing macros
client = []
server = []

[dev-dependencies]
trybuild = "1.0"
engine-core = { path = "../core" }
proptest = "1.4"
