[package]
name = "engine-networking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.35", features = ["full"] }
engine-core = { path = "../core" }

[dev-dependencies]
criterion = "0.5"
