[package]
name = "engine-networking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.35", features = ["full"] }
engine-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tracing = "0.1"
agent-game-engine-profiling = { path = "../profiling", optional = true }

[features]
profiling = ["agent-game-engine-profiling", "engine-core/profiling"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"

[[bench]]
name = "socket_benches"
harness = false

[[bench]]
name = "snapshot_benches"
harness = false

[[bench]]
name = "protocol_benches"
harness = false

[[bench]]
name = "delta_benches"
harness = false

[[bench]]
name = "integration_benches"
harness = false
