[package]
name = "engine-observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tracy-client = { version = "0.17", optional = true }
puffin = { version = "0.19", optional = true }

[features]
default = []
tracy = ["tracy-client"]
puffin = ["dep:puffin"]
