[package]
name = "engine-physics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rapier3d = { version = "0.18", features = ["parallel", "simd-stable"] }
engine-core = { path = "../core" }
engine-math = { path = "../math", features = ["serde", "simd"] }
agent-game-engine-profiling = { path = "../profiling", optional = true }
puffin = { version = "0.19", optional = true }
serde = { version = "1.0", features = ["derive"] }
glam = "0.25"
rayon = "1.10"
crossbeam-channel = "0.5"
tracing = "0.1"

[features]
profiling = ["dep:agent-game-engine-profiling", "agent-game-engine-profiling/profiling-puffin", "puffin"]

[build-dependencies]
engine-build-utils = { path = "../build-utils" }

[dev-dependencies]
criterion = "0.5"
serde_yaml = "0.9"

[[bench]]
name = "integration_bench"
harness = false

[[bench]]
name = "physics_integration_comparison"
harness = false

[[bench]]
name = "parallel_threshold_bench"
harness = false

[[bench]]
name = "threshold_standalone"
harness = false

[[bench]]
name = "component_benches"
harness = false
