[package]
name = "engine-physics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rapier3d = { version = "0.32", features = ["parallel", "simd-stable"] }
engine-core = { path = "../core" }
engine-math = { path = "../math", features = ["serde", "simd"] }
engine-macros = { path = "../macros" }
silmaril-profiling = { path = "../profiling", optional = true }
puffin = { version = "0.19", optional = true }
engine-renderer = { path = "../renderer", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = { workspace = true }
rayon = "1.10"
crossbeam-channel = "0.5"
tracing = "0.1"
rusqlite = { version = "0.30", features = ["bundled"] }
csv = "1.3"
sha2 = "0.10"
bincode = "1.3"

[features]
profiling = ["dep:silmaril-profiling", "silmaril-profiling/profiling-puffin", "puffin"]
backtrace = []
debug-render = ["dep:engine-renderer"]

[build-dependencies]
engine-build-utils = { path = "../build-utils" }

[dev-dependencies]
criterion = "0.5"
serde_yaml = "0.9"
bincode = "1.3"
engine-macros = { path = "../macros" }
tracing-subscriber = "0.3"
tempfile = "3.8"
proptest = "1.4"

[[bench]]
name = "parallel_threshold_bench"
harness = false

[[bench]]
name = "threshold_standalone"
harness = false

[[bench]]
name = "component_benches"
harness = false

[[bench]]
name = "character_benches"
harness = false

[[bench]]
name = "deterministic_benches"
harness = false

[[bench]]
name = "joint_benches"
harness = false

[[bench]]
name = "advanced_benches"
harness = false

[[bench]]
name = "agentic_debug_benches"
harness = false

[[bench]]
name = "debug_render_benches"
harness = false
required-features = ["debug-render"]

[[bench]]
name = "solver_baseline_benches"
harness = false
